added google redirect url as  a env variable

--- a/server/config/.env.development
+++ b/server/config/.env.development
@@ -1,4 +1,5 @@
   GOOGLE_CLIENT_ID = '433755318818-ser98urom28pmkgm8amit24e0gn69hgu.apps.googleusercontent.com'
   GOOGLE_CLIENT_SECRET = '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'
+  GOOGLE_REDIRECT_URL = 'http://localhost:5002/auth/google/callback'
   MONGO_URI = 'mongodb+srv://admin:combination@cluster0.7o2mwye.mongodb.net/emailydb?retryWrites=true&w=majority'
   COOKIE_KEY = 'sdadsdasdjlasjkdlalsjdkajsdlk'
