--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,7 @@
     "npm": "6.14.17"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon index.js",
-    "prod": "NODE_ENV=production nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
