--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "BROWSER=none PORT=3004 npm run start --prefix client",
+    "client_dev": "BROWSER=none PORT=3004 npm run start --prefix client",
+    "client_prod": "npm run build --prefix client",
     "server_dev": "NODE_ENV=development nodemon index.js --prefix server",
-    "server_prod": "NODE_ENV=production nodemon index.js --prefix server",
-    "dev": "concurrently \"npm run server_dev\" \"npm run client\"",
-    "prod": "concurrently \"npm run server_prod\" \"npm run client\""
+    "server_prod": "NODE_ENV=production pm2 start server/index.js --name emaily",
+    "dev": "concurrently \"npm run server_dev\" \"npm run client_dev\"",
+    "prod": "concurrently \"npm run server_prod\" \"npm run client_prod\""
   },
   "repository": {
     "type": "git",
