--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
+    "morgan": "^1.10.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "stripe": "^12.11.0"
